# composable-parallel-scheduler-thesis

./: .gitignore  CMakeLists.txt  run_bench.sh  run_bench_timeout.sh
benchmarks/: CMakeLists.txt  bench_mmul.cpp  bench_mtranspose.cpp  bench_reduce.cpp  bench_scan.cpp  bench_spin.cpp  bench_spmv_balanced.cpp  bench_spmv_hyperbolic.cpp  bench_spmv_triangle.cpp
benchmarks/tests/: CMakeLists.txt
cmake/: FindOpenMP.cmake  SetupOpenMP.cmake
git_results/lb4omp/mmul/: bench_mmul_EIGEN_TIMESPAN_GRAINSIZE.json  bench_mmul_OMP_DYNAMIC_NONMONOTONIC.json  bench_mmul_OMP_GUIDED_NONMONOTONIC.json  bench_mmul_OMP_RUNTIME_af.json  bench_mmul_OMP_RUNTIME_awf.json  bench_mmul_OMP_RUNTIME_fac.json  bench_mmul_OMP_RUNTIME_fac2.json  bench_mmul_OMP_RUNTIME_fiss.json  bench_mmul_OMP_RUNTIME_fsc.json  bench_mmul_OMP_RUNTIME_mfsc.json  bench_mmul_OMP_RUNTIME_tap.json  bench_mmul_OMP_RUNTIME_tfss.json  bench_mmul_OMP_STATIC.json  bench_mmul_TBB_AFFINITY.json  bench_mmul_TBB_AUTO.json  bench_mmul_TBB_SIMPLE.json
git_results/lb4omp/mtranspose/: bench_mtranspose_EIGEN_TIMESPAN_GRAINSIZE.json  bench_mtranspose_OMP_DYNAMIC_NONMONOTONIC.json  bench_mtranspose_OMP_GUIDED_NONMONOTONIC.json  bench_mtranspose_OMP_RUNTIME_af.json  bench_mtranspose_OMP_RUNTIME_awf.json  bench_mtranspose_OMP_RUNTIME_fac.json  bench_mtranspose_OMP_RUNTIME_fac2.json  bench_mtranspose_OMP_RUNTIME_fiss.json  bench_mtranspose_OMP_RUNTIME_fsc.json  bench_mtranspose_OMP_RUNTIME_mfsc.json  bench_mtranspose_OMP_RUNTIME_tap.json  bench_mtranspose_OMP_RUNTIME_tfss.json  bench_mtranspose_OMP_STATIC.json  bench_mtranspose_TBB_AFFINITY.json  bench_mtranspose_TBB_AUTO.json  bench_mtranspose_TBB_SIMPLE.json  fails
git_results/lb4omp/reduce/: bench_reduce_EIGEN_TIMESPAN_GRAINSIZE.json  bench_reduce_OMP_DYNAMIC_NONMONOTONIC.json  bench_reduce_OMP_GUIDED_NONMONOTONIC.json  bench_reduce_OMP_RUNTIME_af.json  bench_reduce_OMP_RUNTIME_awf.json  bench_reduce_OMP_RUNTIME_fac.json  bench_reduce_OMP_RUNTIME_fac2.json  bench_reduce_OMP_RUNTIME_fiss.json  bench_reduce_OMP_RUNTIME_fsc.json  bench_reduce_OMP_RUNTIME_mfsc.json  bench_reduce_OMP_RUNTIME_tap.json  bench_reduce_OMP_RUNTIME_tfss.json  bench_reduce_OMP_STATIC.json  bench_reduce_TBB_AFFINITY.json  bench_reduce_TBB_AUTO.json  bench_reduce_TBB_SIMPLE.json  fails
git_results/lb4omp/scan/: bench_scan_EIGEN_TIMESPAN_GRAINSIZE.json  bench_scan_OMP_DYNAMIC_NONMONOTONIC.json  bench_scan_OMP_GUIDED_NONMONOTONIC.json  bench_scan_OMP_RUNTIME_af.json  bench_scan_OMP_RUNTIME_awf.json  bench_scan_OMP_RUNTIME_fac.json  bench_scan_OMP_RUNTIME_fac2.json  bench_scan_OMP_RUNTIME_fiss.json  bench_scan_OMP_RUNTIME_fsc.json  bench_scan_OMP_RUNTIME_mfsc.json  bench_scan_OMP_RUNTIME_tap.json  bench_scan_OMP_RUNTIME_tfss.json  bench_scan_OMP_STATIC.json  bench_scan_TBB_AFFINITY.json  bench_scan_TBB_AUTO.json  bench_scan_TBB_SIMPLE.json  fails
git_results/lb4omp/spin_atomic/: bench_spin_atomic_EIGEN_TIMESPAN_GRAINSIZE.json  bench_spin_atomic_OMP_DYNAMIC_NONMONOTONIC.json  bench_spin_atomic_OMP_GUIDED_NONMONOTONIC.json  bench_spin_atomic_OMP_RUNTIME_af.json  bench_spin_atomic_OMP_RUNTIME_awf.json  bench_spin_atomic_OMP_RUNTIME_fac.json  bench_spin_atomic_OMP_RUNTIME_fac2.json  bench_spin_atomic_OMP_RUNTIME_fiss.json  bench_spin_atomic_OMP_RUNTIME_fsc.json  bench_spin_atomic_OMP_RUNTIME_mfsc.json  bench_spin_atomic_OMP_RUNTIME_tap.json  bench_spin_atomic_OMP_RUNTIME_tfss.json  bench_spin_atomic_OMP_STATIC.json  bench_spin_atomic_TBB_AFFINITY.json  bench_spin_atomic_TBB_AUTO.json  bench_spin_atomic_TBB_SIMPLE.json  fails
git_results/lb4omp/spin_distributed_read/: bench_spin_distributed_read_EIGEN_TIMESPAN_GRAINSIZE.json  bench_spin_distributed_read_OMP_DYNAMIC_NONMONOTONIC.json  bench_spin_distributed_read_OMP_GUIDED_NONMONOTONIC.json  bench_spin_distributed_read_OMP_RUNTIME_af.json  (+13 more)
include/benchmarks/: scan.h  spmv.h
include/tests/: CMakeLists.txt  parallel_for_tests.cpp
parlaylib/: CMakeLists.txt
scheduling_dist/: scheduling_dist.cpp
timespan_tuner/: tuner.cpp
trace_spin/: trace_spin.cpp
(+280 files in other folders)
